Bug Fixes
• Fixed Bleached Chalk Stick crash with Jade Installed
• Fixed Bleached Chalk Stick spamming logs with One Probe Installed
• Fixed Pick blocking bleached chalk dust crash
--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
Code Changes
• Chalk List and Chalk Dust List no longer uses dye colours, instead uses Integers
• Paintbrush no longer stores a dye colour
• Forgot to put it in V1.0.1 changelog, but I fixed the cork button model













V1.0.1
--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
Bug Fixes
• Fixed Dyed Flower Pot Recipes (You can now craft dyed flower pots with a normal flower pot)
• Fixed Smooth Cork Recipes (You can now craft smooth cork)
--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
Sounds
• Added Custom Soapstone Sounds
• Added Custom Cork Wood Set Sounds



V1.0.0
--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
Items
• Added Chalk Sticks (16 dye colours + bleached)
• Added Paint Brushes (16 dye colours + bleachdew)
• Added 33 Chalk Patterns (The chalk stick can draw chalk patterns)
• Added Pottery Sherd Item for blank pottery pattern
• Added Finale Pottery Sherd
• Added Gateway Pottery Sherd
• Added Roll Pottery Sherd
• Added Ruined Pottery Sherd