@@ -1,14 +1,14 @@
 modLoader = "javafml"
 loaderVersion = "[47,)"
-issueTrackerURL = "https://github.com/KekeCreations/Arts-and-Crafts/issues"
-updateJSONURL="https://raw.githubusercontent.com/KekeCreations/Arts-and-Crafts/1.20.1x/forge_updates.json"
-displayURL="https://kekecreations.boomla.net/minecraft/java-mods/arts-and-crafts"
 license = "All rights reserved"
 
 [[mods]]
 modId = "arts_and_crafts"
 version = "${version}"
 displayName = "Arts & Crafts"
+issueTrackerURL = "https://github.com/KekeCreations/Arts-and-Crafts/issues"
+updateJSONURL="https://raw.githubusercontent.com/KekeCreations/Arts-and-Crafts/1.20.1x/forge_updates.json"
+displayURL="https://kekecreations.boomla.net/minecraft/java-mods/arts-and-crafts"
 authors = "KekeCreations and Arbeet!"
 description = '''
 A fabric & forge mod that adds all new decoration features into the game!
