@@ -4,7 +4,7 @@ minecraft_version=1.20.1
 enabled_platforms=fabric,forge
 
 archives_base_name=arts_and_crafts
-version=1.0.1
+version=1.0.2
 maven_group=com.kekecreations.arts_and_crafts
 
 fabric_version=0.90.4+1.20.1
